tests/vrml97/good/line-number.wrl
#VRML V2.0 utf8
Transform {
  rotation 0 0 0 0
}
