tests/vrml97/bad/exposedfield-in-script.wrl
#VRML V2.0 utf8
Script {
  exposedField SFBool val TRUE
}
